--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,12 @@
         <activity
             android:name=".ui.splash.activity.SplashActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity
             android:name=".ui.login.activity.LoginActivity"
@@ -28,23 +33,5 @@
         <activity
             android:name=".ui.recoverPassword.activity.RecoverPasswordActivity"
             android:screenOrientation="portrait" />
-
-        <activity
-            android:name=".ui.main.activity.MainActivity"
-            android:screenOrientation="portrait" />
-
-        <activity
-            android:name=".ui.comics.activity.ComicsActivity"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".ui.comicDetail.activity.ComicDetailActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 </manifest>
