--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,28 +13,28 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".ui.splash.activity.SplashActivity"
+            android:name="com.github.juan1393.cleanArchitectureKotlin.app.ui.splash.activity.SplashActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
-            android:name=".ui.login.activity.LoginActivity"
+            android:name="com.github.juan1393.cleanArchitectureKotlin.app.ui.login.activity.LoginActivity"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".ui.signUp.activity.SignUpActivity"
+            android:name="com.github.juan1393.cleanArchitectureKotlin.app.ui.signUp.activity.SignUpActivity"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".ui.recoverPassword.activity.RecoverPasswordActivity"
+            android:name="com.github.juan1393.cleanArchitectureKotlin.app.ui.recoverPassword.activity.RecoverPasswordActivity"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".ui.main.activity.MainActivity"
+            android:name="com.github.juan1393.cleanArchitectureKotlin.app.ui.main.activity.MainActivity"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".ui.comics.activity.ComicsActivity"
+            android:name="com.github.juan1393.cleanArchitectureKotlin.app.ui.comics.activity.ComicsActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,7 +43,7 @@
         </activity>
 
         <activity
-            android:name=".ui.comicDetail.activity.ComicDetailActivity"
+            android:name="com.github.juan1393.cleanArchitectureKotlin.app.ui.comicDetail.activity.ComicDetailActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
